Fix spacing for blockquote

--- a/patterns/Copytext/copytext.styl
+++ b/patterns/Copytext/copytext.styl
@@ -80,6 +80,7 @@
     line-height 2.4rem
     padding 1.2rem 0 1.2rem 2rem
     border-left 3px solid var(--neutral-40)
+    margin-bottom 1.2rem
 
     cite
       display block
